--- a/src/index.css
+++ b/src/index.css
@@ -288,7 +288,7 @@ nav {
   font-weight: 700;
 }
 
-.toggle-btn{
+.toggle-btn {
   width: 2rem;
   height: 2rem;
   background: var(--white);
@@ -299,6 +299,46 @@ nav {
   cursor: pointer;
 }
 
-.toggle-btn:hover{
+.toggle-btn:hover {
   transform: scale(1.05);
+}
+
+/* 
+============= 
+Hero
+=============== 
+*/
+.hero-container {
+  height: calc(100vh - 5rem);
+  display: grid;
+  place-items: center;
+}
+
+.hero-center {
+  color: var(--white);
+  width: var(--fluid-width);
+  max-width: var(--max-width);
+}
+.hero-center h1 {
+  font-size: clamp(3rem, 5vw, 5rem);
+  margin-bottom: 1rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.hero-center p{
+  line-height: 1.5;
+}
+
+@media screen and (min-width:992px){
+  .hero-center{
+    text-align: center;
+  }
+  .hero-center p {
+    max-width: 35em;
+    margin:  0 auto;
+  }
+  .toggle-btn{
+    display: none;
+  }
 }
